@startuml

title __AGENT's Class Diagram__\n

  namespace Agent {
    abstract class Agent.Agent {
        # balance : int
        # image : Image
        # island : boolean
        # tile : int
        # x : int
        # y : int
        + draw()
        + getBalance()
        + getTile()
        + getX()
        + getY()
        + isIsland()
        + setBalance()
        + setIsland()
        + setTile()
        + setX()
        + setY()
    }
  }
  

  namespace Agent {
    class Agent.Computer {
        + Computer()
        + draw()
        + getBalance()
    }
  }
  

  namespace Agent {
    class Agent.Player {
        + Player()
        + draw()
        + getBalance()
    }
  }
  

  Agent.Computer -up-|> Agent.Agent
  Agent.Player -up-|> Agent.Agent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
